--- a/Project.toml
+++ b/Project.toml
@@ -2,11 +2,12 @@ authors = ["Matteo De Francesco <matteo0598@gmail.com>"]
 version = "0.1.3"
 
 [deps]
+COSMO = "1e616198-aa4e-51ec-90a2-23f7fbd31d8d"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Convex = "f65535da-76fb-5f13-bab9-19810c17039a"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+ECOS = "e2685f51-7e38-5353-a97d-a921fd2c8199"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
