--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,8 @@ version = "0.1.3"
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+MathProgBase = "fdba3010-5040-5b88-9595-932c9decdf73"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
