--- a/Project.toml
+++ b/Project.toml
@@ -9,3 +9,4 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 MathProgBase = "fdba3010-5040-5b88-9595-932c9decdf73"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+SCS = "c946c3f1-0d1f-5ce8-9dea-7daa1f7e2d13"
